--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,9 @@
     <title>frontend</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root">
+
+    </div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
